--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@
     text-decoration: underline;
 }
 /* -----------------------------------header------------------------------------------- */
-.container{
-    margin:40px auto;
+.home{
+    min-height: 40vh;
+    padding:50% 0 auto auto;
 }
 .line{
     background-color: cadetblue;
