--- a/style.css
+++ b/style.css
@@ -20,10 +20,14 @@
     color: rgb(20, 71, 73);
     text-decoration: underline;
 }
-/* -----------------------------------header------------------------------------------- */
+/* -----------------------------------home section------------------------------------------- */
 .home{
     min-height: 40vh;
-    padding:50% 0 auto auto;
+
+}
+.container{
+ padding:4% 0 0 0;
+
 }
 .line{
     background-color: cadetblue;
@@ -92,4 +96,22 @@
 }
  .btn:hover::before{
     width: 100%;
+}
+/* ------------------------------------about section--------------------- */
+.sec-about{
+    /* min-height: 50vh; */
+}
+.abot-title{
+    text-align: center;
+}
+.abot-title span,th{
+    color: cadetblue;
+    text-decoration: underline;
+}
+.about-para{
+    border-right: 2px solid cadetblue;
+}
+table, th, td {
+  /* border:2px solid black; */
+  padding: 10px;
 }
