--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body{
 }
 /* ------------------------------------navbar--------------------------- */
 .logo {    
-    margin-right: 50%;
+    margin-right: 40%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .nav{
     background-color: cadetblue;
